Updated configuration tests.
Sync commit.

--- a/ZConfig.NET/TestLiZConfigCommon/Resources/XML/test-config.properties
+++ b/ZConfig.NET/TestLiZConfigCommon/Resources/XML/test-config.properties
@@ -21,6 +21,6 @@
 # Subho Ghosh (subho dot ghosh at outlook.com)
 #
 #
-
-config.file=src/test/resources/XML/test-config.xml
+config.name=test-config
+config.file=..\..\..\Resources\XML\test-config.xml
 config.version=0.*
