--- a/ZConfig.NET/TestLiZConfigCommon/Resources/XML/test-config-include.properties
+++ b/ZConfig.NET/TestLiZConfigCommon/Resources/XML/test-config-include.properties
@@ -21,6 +21,6 @@
 # Subho Ghosh (subho dot ghosh at outlook.com)
 #
 #
-
-config.file=src/test/resources/XML/test-config-include.xml
-config.version=0.0
+config.name=test-config-include
+config.file=..\..\..\Resources\XML\test-config-include.xml
+config.version=0.*
