--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: csharp
-solution: ZConfig.NET/ZConfig.NET.sln
+solution: ZConfig.NET.sln
 mono: none
 dotnet: 2.1
+before_install:cd ZConfig.NET
 install:
         - dotnet restore
 script:
