--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ install:
         - dotnet restore
 script:
         - dotnet build 
-        - dotnet test TestLiZConfigCommon\TestLibZConfigCommon.csproj
+        - dotnet test TestLiZConfigCommon/TestLibZConfigCommon.csproj
