Fixed path for Travis build

--- a/ZConfig.NET/TestLiZConfigCommon/Resources/XML/test-config-include.properties
+++ b/ZConfig.NET/TestLiZConfigCommon/Resources/XML/test-config-include.properties
@@ -22,5 +22,5 @@
 #
 #
 config.name=test-config-include
-config.file=..\..\..\Resources\XML\test-config-include.xml
+config.file=../../../Resources/XML/test-config-include.xml
 config.version=0.*
