--- a/ZConfig.NET/TestLiZConfigCommon/Resources/XML/test-config.properties
+++ b/ZConfig.NET/TestLiZConfigCommon/Resources/XML/test-config.properties
@@ -22,5 +22,5 @@
 #
 #
 config.name=test-config
-config.file=..\..\..\Resources\XML\test-config.xml
+config.file=../../../Resources/XML/test-config.xml
 config.version=0.*
