--- a/ZConfig.NET/LibZConfigCommon/LibZConfigCommon.csproj
+++ b/ZConfig.NET/LibZConfigCommon/LibZConfigCommon.csproj
@@ -8,8 +8,9 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
-    <PackageReference Include="NLog" Version="4.5.11" />
-    <PackageReference Include="NLog.Config" Version="4.5.11" />
+    <PackageReference Include="NLog" Version="4.6.0" />
+    <PackageReference Include="NLog.Config" Version="4.6.0" />
+    <PackageReference Include="SharpZipLib" Version="1.1.0" />
   </ItemGroup>
 
 </Project>
