--- a/ZConfig.NET/LibZConfigCommon/LibZConfigCommon.csproj
+++ b/ZConfig.NET/LibZConfigCommon/LibZConfigCommon.csproj
@@ -4,7 +4,7 @@
     <OutputType>library</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <RootNamespace>LibZConfig.Common</RootNamespace>
-    <Version>0.1.6.003</Version>
+    <Version>0.1.6.004</Version>
     <PackageProjectUrl>https://github.com/subhagho/Zconfig.NET</PackageProjectUrl>
     <RepositoryUrl>https://github.com/subhagho/Zconfig.NET</RepositoryUrl>
     <RepositoryType>github</RepositoryType>
@@ -26,6 +26,9 @@
     <Authors>Subho Ghosh</Authors>
     <Company>CodeKutter</Company>
     <Product>ZConfig</Product>
+    <AssemblyVersion>0.1.6.4</AssemblyVersion>
+    <FileVersion>0.1.6.4</FileVersion>
+    <PackageReleaseNotes>https://github.com/subhagho/Zconfig.NET/commit/35f5f930441f3fa9981affa44419d830a4487359</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
