Fixed encryption compatibility.

--- a/ZConfig.NET/TestLiZConfigCommon/Resources/XML/test-config-encrypted.properties
+++ b/ZConfig.NET/TestLiZConfigCommon/Resources/XML/test-config-encrypted.properties
@@ -21,6 +21,6 @@
 # Subho Ghosh (subho dot ghosh at outlook.com)
 #
 #
-config.name=test-config-encrypted
+config.name=test-config
 config.file=../../../Resources/XML/test-config-encrypted.xml
 config.version=0.*
