--- a/ZConfig.NET/LibZConfigTransport/LibZConfigTransport.csproj
+++ b/ZConfig.NET/LibZConfigTransport/LibZConfigTransport.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LibZConfigCommon\LibZConfigCommon.csproj" />
+  </ItemGroup>
+
 </Project>
