Refactored Solution to use .Net Standard

--- a/ZConfig.NET/TestLiZConfigCommon/TestLibZConfigCommon.csproj
+++ b/ZConfig.NET/TestLiZConfigCommon/TestLibZConfigCommon.csproj
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LibZConfigCommon\LibZConfigCommon.csproj" />
+    <ProjectReference Include="..\ZConfigCommon\ZConfigCommon.csproj" />
   </ItemGroup>
 
 </Project>
